--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>hzy</title>
 </head>
 <body>
     <p>因为是说需要index才行，所以进行一下尝试</p>
